# ValidIndexConverter

./: Cargo.toml
src/: binary_data.rs  json_data.rs  main.rs  text_data.rs
