[package]
name = "valid_index_converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
deku = "0.16"
deku_derive = "0.16"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
